--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,37 @@
 # Python bytecode / cache
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyo
 
 # Virtual environments
 .venv/
 venv/
 env/
 
-# Tooling caches
-.mypy_cache/
+# Test / tooling caches
 .pytest_cache/
+.mypy_cache/
+.ruff_cache/
 
-# OS/editor noise
+# Build / packaging artifacts
+build/
+dist/
+*.egg-info/
+
+# IDE / editor
+.idea/
+.vscode/
+
+# OS junk
 .DS_Store
 Thumbs.db
 
-# Generated ingestion outputs (keep folders, ignore snapshots)
-storage/raw/*.json
-storage/normalized/*.json
+# Local runtime data (generated)
+data/*.db
+data/*.sqlite
+data/*.faiss
+data/*.meta.json
 
-# Keep placeholder files tracked
-!storage/raw/.gitkeep
-!storage/normalized/.gitkeep
+# Local secrets / env files
+.env
+.env.*
